--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "@babel/core": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
     "@babel/preset-react": "^7.10.1",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
     "cssnano": "^4.1.10",
     "parcel-bundler": "^1.12.4"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "recharts": "^1.8.5"
   }
 }
